src/objects/Requested_Licensed_Activity__c.object
<CustomObject>
    <description>This is a junction object to link an Activity with a Case (customer onboarding process). Used to capture Requested and Licensed Activities</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requested/Licensed Activities</relationshipLabel>
        <relationshipName>Requested_Licensed_Activities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>Activity_Custom__c</referenceTo>
        <relationshipName>Requested_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requested Activity during Customer onboarding related to a Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Requested/Licensed Activities</relationshipLabel>
        <relationshipName>Requsted_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DDA_Id__c</fullName>
        <externalId>true</externalId>
        <label>DDA Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <label>Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licensed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licensed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>Activity__r.Segment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested Activity</fullName>
                </value>
                <value>
                    <fullName>Licensed Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <description>Unique Identifier for integration Purposes</description>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Requested/Licensed Activities</relationshipLabel>
        <relationshipName>Requested_Licensed_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requested/Licensed Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity__c</columns>
        <columns>Unique_Identifier__c</columns>
        <columns>Type__c</columns>
        <columns>Work_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Requested Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requested/Licensed Activities</pluralLabel>
    <recordTypes>
        <fullName>Licensed_Activity</fullName>
        <active>true</active>
        <description>To capture Licensed Activities</description>
        <label>Licensed Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requested_Activity</fullName>
        <active>true</active>
        <description>To capture Requested Activities</description>
        <label>Requested Activity</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>